--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@celo-tools/use-contractkit": "~1.2.0",
     "@celo/contractkit": "^1.2.4",
     "@ubeswap/default-token-list": "^3.3.5",
     "axios": "^0.21.1",
